--- a/10_classes_and_oop/bind.html
+++ b/10_classes_and_oop/bind.html
@@ -13,8 +13,16 @@
         constructor(){
             this.library = "React"
             this.server = "https://localhost:3000"
+
+            document
+                .querySelector('button')
+                .addEventListener('click',this.handleClick.bind(this))
         }
-        handleClick(){}
+        handleClick(){
+            console.log("button clicked");
+            console.log(this.server);
+        }
     }
+    const app = new React() 
 </script>
 </html>
